--- a/visual/index.html
+++ b/visual/index.html
@@ -3,10 +3,10 @@
 <script src='vendor/three.js/build/three.min.js'></script>
 <script src='vendor/three.js/examples/js/controls/OrbitControls.js'></script>
 <div style='position: absolute; top: 0px; width: 100%;font-family:arial; font-weight: bolder; padding-top: 5px;'>
-	<a href="https://github.com/jeromeetienne/threejsboilerplate" target="_blank">Boilerplate</a>
+	<!-- <a href="https://github.com/jeromeetienne/threejsboilerplate" target="_blank">Boilerplate</a>
 	for
 	<a href="http://threejs.org" target="_blank">three.js</a>
-	- works on desktop and mobile
+	- works on desktop and mobile -->
 </div><body style='margin: 0px; overflow: hidden; text-align:center;'><script>
 	//////////////////////////////////////////////////////////////////////////////////
 	//		Init
