--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,11 @@
 <script src='vendor/three.js/build/three.min.js'></script>
 <script src='vendor/three.js/examples/js/controls/OrbitControls.js'></script>
 <div style='position: absolute; top: 0px; width: 100%;font-family:arial; font-weight: bolder; padding-top: 5px;'>
-</div><body style='margin: 0px; overflow: hidden; text-align:center;'><script>
+</div>
+<style>footer{position: fixed; bottom:0; right:0; background:white; float:right; font-family: Arial, sans-serif; font-size:12px; opacity: 0.1; -webkit-transition: all 500ms ease-in-out; -moz-transition: all 500ms ease-in-out; transition: all 500ms ease-in; cursor:hand; cursor:pointer;}
+footer:hover{opacity:1;}
+footer p{margin: 5px 8px;}</style>
+<body style='margin: 0px; overflow: hidden; text-align:center;'><script>
 	//////////////////////////////////////////////////////////////////////////////////
 	//		Init
 	//////////////////////////////////////////////////////////////////////////////////
@@ -412,4 +416,7 @@
 		}
 	});
 </script>
+<footer>
+	<p>Projet réalisé par <a href="http://ca.linkedin.com/pub/ruby-maude-rioux/5a/3b9/b5a">Ruby-Maude Rioux</a> et <a href="http://erwandorgeville.com">Erwan d'Orgeville</a>. Sources et documentation <a href="http://github.com/th3m4ri0/projet-captation">disponibles sur Github</a> sous license MIT</p>
+</footer>
 </body>
